# harness-core

./: .dockerignore  .env.example  .gitignore  ADDING_A_TARGET.md  CHANGELOG.md  CLAUDE.md  Dockerfile  EXTRACTION.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
docs/: IMPROVEMENT.md  INTERNALS.md  TRACING.md
examples/weather_agent/: README.md  pyproject.toml  weather.py
plugins/harness-core/: README.md
plugins/harness-core/.claude-plugin/: plugin.json
plugins/harness-core/skills/add-target/: SKILL.md
plugins/harness-core/skills/compare-and-audit/: SKILL.md
plugins/harness-core/skills/langsmith/: SKILL.md
plugins/harness-core/skills/quickstart/: SKILL.md
plugins/harness-core/skills/run-eval/: SKILL.md
src/harness_core/: __init__.py  __main__.py  analyze_session.py  analyze_trace.py  checklists.py  compare.py  experiment.py  experiment_audit.py  experiment_runner.py  judge.py  judge_calibration.py  langsmith_export.py  langsmith_pull.py  loop.py  metrics.py  otel.py  overfit_gate.py  overfit_summary.py  record.py  refusal_audit.py  results.py  runner.py  scenario.py  scenario_synth.py  server.py  steer.py  sweep.py  target.py  test_cli.py  test_compare.py  test_evidence.py  test_experiment_runner.py  test_generic_answering_target.py  test_iron_rule.py  test_loop_generic.py  test_metrics.py  test_otel.py  test_overfit_gate.py  test_parity_fda.py  test_phase2.py  (+17 more)
src/harness_core/static/: index.html
tools/: check_drift.py
